# blog-project

./: .gitignore  Cargo.toml  README.md
blog-cli/: Cargo.toml
blog-cli/src/: main.rs
blog-client/: Cargo.toml  build.rs
blog-client/proto/: blog.proto
blog-client/src/: error.rs  grpc_client.rs  http_client.rs  lib.rs
blog-server/: .env.example  Cargo.toml  build.rs
blog-server/migrations/: 20260218075812_create_users.sql  20260218081356_create_posts.sql
blog-server/proto/: blog.proto
blog-server/src/: lib.rs  main.rs
blog-server/src/application/: auth_service.rs  blog_service.rs
blog-server/src/data/: mod.rs  post_repository.rs  user_repository.rs
blog-server/src/domain/: error.rs  mod.rs  post.rs  user.rs
blog-server/src/infrastructure/: database.rs  jwt.rs  mod.rs
blog-server/src/presentation/: convert.rs  dto.rs  grpc_service.rs  http_handlers.rs  middleware.rs  mod.rs
blog-server/src/tools/: test.rs
blog-wasm/: Cargo.toml  index.html  style.css
blog-wasm/src/: lib.rs
