[workspace]
members = ["blog-cli","blog-client","blog-server", "blog-wasm"]
resolver = "3"

[workspace.dependencies]
tonic = "0"
prost = "0"
tonic-prost = "0"
env_logger = "0"
log = "0"
tonic-prost-build = "0"
prost-types = "0"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
chrono = {version = "0", features = ["serde"]}
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "deny"
