[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0"
actix-cors = "0"
sqlx = {version = "0", features = ["runtime-tokio", "postgres", "migrate", "uuid", "chrono"]}
dotenvy = "0"
jsonwebtoken = {version = "10", features = ["rust_crypto"]}
argon2 = "0"
serde = {workspace = true}
serde_json = {workspace = true}
chrono = {workspace = true}
anyhow = {workspace = true}
thiserror = {workspace = true}
tracing = "0"
tracing-subscriber = {version = "0", features = ["env-filter", "time", "json"]}
env_logger = {workspace = true}
log = {workspace = true}
validator = {version = "0", features = ["derive"]}
tokio = {workspace = true}
tonic = {workspace = true}
prost = {workspace = true}
tonic-prost = {workspace = true}
prost-types = {workspace = true}

[build-dependencies]
tonic-prost-build = {workspace = true}
