[package]
name = "blog-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0"
wasm-bindgen-futures = "0"
web-sys = {version = "0", features = ["Document", "Element", "HtmlElement", "Window", "Storage", "Request", "RequestInit", "Response", "Headers", "console"]}
gloo-net = "0.6"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde-wasm-bindgen = "0"
js-sys = "0"
